--- a/client/Client/src/app/books-list/books-list.component.html
+++ b/client/Client/src/app/books-list/books-list.component.html
@@ -3,10 +3,8 @@
     <div class="card" *ngFor="let book of books">
         <li class="list">
             <ul>Title: {{book.title}}</ul>
-            <ul>Description: {{book.description}}</ul>
-            <ul>Price: {{book.price}}</ul>
-            <ul>Author: {{book.authorName}}</ul>
-            <ul>Genre: {{book.genreName}}</ul>
+            <ul>Genre: {{book.genre}}</ul>
+            <ul>Price: {{book.price}}$</ul>
         </li>
     </div>
 </div>
