--- a/client/Client/src/app/books-list/books-list.component.html
+++ b/client/Client/src/app/books-list/books-list.component.html
@@ -1,10 +1,11 @@
 <h1>Books List</h1>
 <div class="card-container">
-    <div class="card" *ngFor="let book of books">
-        <li class="list">
-            <ul>Title: {{book.title}}</ul>
-            <ul>Genre: {{book.genre}}</ul>
-            <ul>Price: {{book.price}}$</ul>
-        </li>
+  <div class="card" *ngFor="let book of books">
+    <img [src]="book.imagePath" alt="{{book.title}}" class="book-image" />
+    <div class="card-content">
+      <h3 class="book-title">{{book.title}}</h3>
+      <p class="book-genre">{{book.genre}}</p>
+      <p class="book-price">{{book.price | currency}}</p>
     </div>
+  </div>
 </div>
