--- a/client/Client/src/app/books-list/books-list.component.css
+++ b/client/Client/src/app/books-list/books-list.component.css
@@ -26,7 +26,7 @@
 
 /* Image styling */
 .book-image {
-  width: 180px;
+  width: 190;
   height: 280px;
   object-fit: cover; /* Ensures the image is correctly cropped */
   border-radius: 8px;
