--- a/client/Client/src/app/app.component.html
+++ b/client/Client/src/app/app.component.html
@@ -1,9 +1,2 @@
 <app-nav></app-nav>
-<div class="d-flex main-container">
-  <div class="filter-section">
-    <app-books-filter></app-books-filter>
-  </div>
-  <div class="books-list-section">
-    <app-books-list></app-books-list>
-  </div>
-</div>
+<router-outlet></router-outlet>
