--- a/client/Client/src/app/nav/nav.component.html
+++ b/client/Client/src/app/nav/nav.component.html
@@ -42,7 +42,7 @@
       <div class="d-flex align-items-center">
         <ng-container *ngIf="isLoggedIn; else guest">
           <span class="me-2">Welcome, username</span>
-          <button class="btn btn-danger me-2">Logout</button>
+          <button class="btn btn-danger me-2" (click)="logout()">Logout</button>
         </ng-container>
         <ng-template #guest>
           <button class="btn btn-primary me-2" routerLink="/login">Sign In</button>
