--- a/client/Client/src/app/app.component.html
+++ b/client/Client/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-nav></app-nav>
 <router-outlet></router-outlet>
+<footer class="bg-dark text-white pt-4 pb-2 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">&copy; {{ currentYear }} BookStore. Всі права захищені.</p>
+      <p class="mb-0">Адреса: Україна, Київ | Телефон: +38 (099) 123-4567</p>
+    </div>
+  </footer>
+  
